--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -56,28 +56,34 @@
     <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 mt-3">
       <div class="card">
         <div class="row no-gutters">
+
+          {{ if .Site.Params.Author.authorPostImage }}
           <div class="col-md-2 ">
             <div class="card-body ">
-              {{ $image := resources.Get "/img/bino-about-small.jpg" }}
+              {{- $authorPostImage := "" -}}
+              {{ $authorPostImage = .Site.Params.Author.authorPostImage }}
+              {{ $image := resources.Get $authorPostImage }}
               <img src="{{ $image.RelPermalink }}" class="img-responsive img-50 img-round" alt="">
             </div>
           </div>
+          {{ end }}
 
 
           <div class="col-md-10">
             <div class="card-body p-1.1">
               <p class="p-0 m-0"><small class="text-muted">Written By</small></p>
               <p class="card-text fs-5 m-0">
-
-                {{ if .Params.author }}
-                {{ .Params.author | safeHTML }}
+                 
+                {{ if .Site.Params.Author.name }}
+                {{ .Site.Params.Author.name | safeHTML }}
                 {{ else }}
                 {{ .Site.Author.name | safeHTML }}
                 {{ end }}
 
               </p>
-              {{ if .Site.Params.authorInfo }}
-              <p class="card-text fs-6  m-0">{{ .Site.Params.authorInfo | safeHTML }}</p>
+
+               {{ if .Site.Params.Author.authorInfo }}
+                <p class="card-text fs-6  m-0">{{ .Site.Params.Author.authorInfo | safeHTML }}</p>
               {{ end }}
             </div>
           </div>
