--- a/layouts/about/about.html
+++ b/layouts/about/about.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row flex-lg-row-reverse align-items-center">
       <div class="col-md-8 col-lg-4">
-        {{ $image := resources.Get "/img/bino-about.jpg" }}
+        {{ $image := resources.Get "/img/author-about.jpg" }}
         <img src="{{ $image.RelPermalink }}" alt="Image of Bino Kochumol Varghese"
           class="dd-block mx-lg-auto img-fluid img-rounded img-80">
       </div>
